--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ playground.xcworkspace
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
+.DS_Store
 
 Carthage/Build/
 
